--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 26 18:15:57 EST 2016
-sdk.dir=C\:\\Users\\Mohammed\\AppData\\Local\\Android\\sdk
+#Tue Feb 02 17:11:20 EST 2016
+sdk.dir=/Users/JasonGibson/Library/Android/sdk
