--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 02 17:11:20 EST 2016
-sdk.dir=/Users/JasonGibson/Library/Android/sdk
+#Wed Feb 03 00:11:22 EST 2016
+sdk.dir=C\:\\Android\\sdk
