--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 03 00:11:22 EST 2016
-sdk.dir=C\:\\Android\\sdk
+#Thu Feb 04 17:42:44 EST 2016
+sdk.dir=/Users/JasonGibson/Library/Android/sdk
