added a .gitignore file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
         <activity
             android:name=".loginActivity"
             android:label="@string/title_activity_login"
@@ -23,10 +22,8 @@
         <activity
             android:name=".model.welcome_screen_activity"
             android:label="@string/title_activity_welcome_screen_activity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-=======
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".LoggedOut"></activity>
->>>>>>> 49b67fe23b64186db86df841fdb02bed238b4fec
     </application>
 
 </manifest>
