--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,12 @@
         <activity
             android:name=".model.welcome_screen_activity"
             android:label="@string/title_activity_welcome_screen_activity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".LoggedOut"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".LoggedOut" />
+        <activity
+            android:name=".MainMenu"
+            android:label="@string/title_activity_main_menu"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
