--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Feb 04 17:42:44 EST 2016
-sdk.dir=/Users/JasonGibson/Library/Android/sdk
+#Mon Feb 08 01:15:25 EST 2016
+sdk.dir=X\:\\Users\\Frank\\AppData\\Local\\Android\\sdk
