--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,16 @@
         </activity>
         <activity
             android:name=".loginActivity"
-            android:label="@string/app_name"
+            android:label="Log In"
             android:theme="@style/AppTheme" />
         <activity android:name=".LoggedOut" />
         <activity
             android:name=".MainMenu"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ProfileActivity"
+            android:label="Profile"
             android:theme="@style/AppTheme" />
     </application>
 
