--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 08 01:15:25 EST 2016
-sdk.dir=X\:\\Users\\Frank\\AppData\\Local\\Android\\sdk
+#Tue Feb 09 17:41:43 EST 2016
+sdk.dir=/Users/SaqibAli/Library/Android/sdk
