--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,18 @@
         </activity>
         <activity
             android:name=".loginActivity"
-            android:label="Log In"
+            android:label="@string/title_activity_login"
             android:theme="@style/AppTheme" />
-        <activity android:name=".LoggedOut" />
+        <activity android:name=".LoggedOut"
+            android:label ="@string/title_activity_log_out"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".MainMenu"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ProfileActivity"
-            android:label="Profile"
+            android:label="@string/titel_activity_profile"
             android:theme="@style/AppTheme" />
     </application>
 
