--- a/local.properties
+++ b/local.properties
@@ -7,9 +7,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Tue Feb 09 16:59:51 EST 2016
-=======
-#Tue Feb 09 17:36:59 EST 2016
->>>>>>> master
-sdk.dir=/Users/JasonGibson/Library/Android/sdk
+#Thu Feb 11 16:56:04 EST 2016
+>>>>>>>=master
+sdk.dir=/home/frank/Android/Sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
