--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -27,7 +29,7 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/titel_activity_profile"
+            android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme" />
     </application>
 
