Refactored some classes to fit naming conventions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".loginActivity"
+            android:name=".LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme" />
         <activity android:name=".LoggedOut"
             android:label ="@string/title_activity_log_out"
             android:theme="@style/AppTheme"/>
         <activity
-            android:name=".MainMenu"
+            android:name=".MainMenuActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
         <activity
