--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 15 17:15:32 EST 2016
-sdk.dir=X\:\\Users\\Frank\\AppData\\Local\\Android\\sdk
+#Tue Feb 16 16:34:13 EST 2016
+sdk.dir=/Users/JasonGibson/Library/Android/sdk
