added ability to make calls to RottenTomatoes there is a new activity with comments that shows you how to call things

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
         <activity
             android:name=".SearchResults"
             android:label="@string/title_activity_search_results"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MovieSearchActivity"
+            android:label="@string/title_activity_movie_search"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
