--- a/local.properties
+++ b/local.properties
@@ -7,4 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=/Users/JasonGibson/Library/Android/sdk
+#Fri Feb 19 21:31:01 EST 2016
+sdk.dir=X\:\\Users\\Frank\\AppData\\Local\\Android\\sdk
