put movie search in its own activity

--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sun Feb 21 11:47:17 EST 2016
-sdk.dir=X\:\\Users\\Frank\\AppData\\Local\\Android\\sdk
+sdk.dir=/Users/JasonGibson/Library/Android/sdk
