--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,12 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:23.0.1'
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.4'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
     compile 'com.github.kevinsawicki:http-request:6.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'junit:junit:4.12'
+    compile 'com.android.support:support-v4:23.2.0'
 }
 
