--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 06 15:11:19 EST 2016
-sdk.dir=X\:\\Users\\Frank\\AppData\\Local\\Android\\sdk
+#Mon Mar 07 11:59:58 EST 2016
+sdk.dir=/home/frank/Android/Sdk
