--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Mar 10 13:17:57 EST 2016
-sdk.dir=C\:\\Users\\Daniel\\AppData\\Local\\Android\\sdk
+sdk.dir=/Users/JasonGibson/Library/Android/sdk
