--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 10 13:17:57 EST 2016
-sdk.dir=/Users/JasonGibson/Library/Android/sdk
+#Tue Mar 22 21:00:26 EDT 2016
+sdk.dir=/Users/SaqibAli/Library/Android/sdk
