--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -19,9 +20,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
-configurations.all {
-    resolutionStrategy.force 'com.android.support:support-annotations:23.0.1'
 }
 
 task pmd(type: Pmd) {
@@ -48,16 +46,17 @@ task pmd(type: Pmd) {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:23.0.1'
+    androidTestCompile 'com.android.support:support-annotations:23.2.1'
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.4'
 
-    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.google.android.gms:play-services:8.4.0'
 
     //*******Added these entries below to support Android testing
     androidTestCompile 'junit:junit:4.12'
@@ -70,9 +69,7 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
 
-    /*********Added this entry to support Mock testing ******************
-     *
-     */
+    /*********Added this entry to support Mock testing *******************/
     testCompile 'org.mockito:mockito-core:1.+'
 }
 
