--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_app_id"/>
+        <meta-data
+            android:name="com.google.android.gms.location.places.ui.PlacePicker"
+            android:value="@string/google_app_id" />
 
 
         <activity android:name=".MainActivity">
